create 1password secret op-credentials

--- a/infrastructure/controllers/1password-connect/kustomization.yaml
+++ b/infrastructure/controllers/1password-connect/kustomization.yaml
@@ -4,5 +4,6 @@ kind: Kustomization
 namespace: 1password
 resources:
   - namespace.yaml
+  - secret-op-credentials.yaml
   - helmrepo.yaml
   - helmrelease.yaml
