create 1password secret onepassword-token

--- a/infrastructure/controllers/1password-connect/kustomization.yaml
+++ b/infrastructure/controllers/1password-connect/kustomization.yaml
@@ -5,5 +5,6 @@ namespace: 1password
 resources:
   - namespace.yaml
   - secret-op-credentials.yaml
+  - secret-onepassword-token.yaml
   - helmrepo.yaml
   - helmrelease.yaml
