add sops suffix to encrypted secret

--- a/infrastructure/controllers/1password-connect/kustomization.yaml
+++ b/infrastructure/controllers/1password-connect/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 namespace: 1password
 resources:
   - namespace.yaml
-  - secret-op-credentials.yaml
-  - secret-onepassword-token.yaml
+  - secret-op-credentials.sops.yaml
+  - secret-onepassword-token.sops.yaml
   - helmrepo.yaml
   - helmrelease.yaml
