--- a/infrastructure/configs/cloudflared/kustomization.yaml
+++ b/infrastructure/configs/cloudflared/kustomization.yaml
@@ -1,6 +1,7 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+metadata:
+  namespace: cloudflare
 resources:
-  - ./1password-connect/
-  - ./cloudflared/
+  - secret-tunnel-credentials.sops.yaml
