patch cluster-0 cloudflared helm chart values

--- a/infrastructure/controllers/cluster-0/cloudflared/kustomization.yaml
+++ b/infrastructure/controllers/cluster-0/cloudflared/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 resources:
   - secret-tunnel-credentials.sops.yaml
   - ../../base/cloudflared
+patchesStrategicMerge:
+  - values.yaml
