--- a/infrastructure/controllers/cluster-0/cloudflared/kustomization.yaml
+++ b/infrastructure/controllers/cluster-0/cloudflared/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - secret-tunnel-credentials.sops.yaml
+  - secret-tunnel-certificates.sops.yaml
   - ../../base/cloudflared
 patchesStrategicMerge:
   - values.yaml
