set cloudflared tunnel name to UUID on cluster-0

--- a/infrastructure/controllers/cluster-0/cloudflared/values.yaml
+++ b/infrastructure/controllers/cluster-0/cloudflared/values.yaml
@@ -9,5 +9,5 @@ spec:
       version: ">=1.0.0"
   values:
     config:
-      tunnel: cluster-0-tunnel
+      tunnel: 6268786c-0c8f-424c-a86b-dc088293a5b4
       credentials-file: /etc/cloudflared/creds/6268786c-0c8f-424c-a86b-dc088293a5b4.json
