--- a/clusters/cluster-0/infrastructure.yaml
+++ b/clusters/cluster-0/infrastructure.yaml
@@ -14,6 +14,10 @@ spec:
   path: ./infrastructure/controllers/cluster-0
   prune: true
   wait: true
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-gpg
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
