--- a/infrastructure/controllers/cluster-0/cloudflared/values.yaml
+++ b/infrastructure/controllers/cluster-0/cloudflared/values.yaml
@@ -13,7 +13,7 @@ spec:
         name: tunnel-credentials
     annotations:
       operator.1password.io/item-path: "vaults/Kubernetes/items/cloudflared-credentials"
-      operator.1password.io/item-name: "cloudflared-credentials"
+      operator.1password.io/item-name: "tunnel-credentials"
     config:
       tunnel: 6268786c-0c8f-424c-a86b-dc088293a5b4
       credentials-file: /etc/cloudflared/creds/6268786c-0c8f-424c-a86b-dc088293a5b4.json
