enable serviceMonitor on cloudflared

--- a/apps/cluster-0/cloudflared/values.yaml
+++ b/apps/cluster-0/cloudflared/values.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: cloudflare
 spec:
   values:
+    serviceMonitor:
+      enabled: true
     secret:
       certificates:
         name: tunnel-credentials
