--- a/apps/base/monitoring/helmrelease.yaml
+++ b/apps/base/monitoring/helmrelease.yaml
@@ -2,6 +2,22 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
+  name: prometheus-operator-crds
+  namespace: monitoring
+spec:
+  chart:
+    spec:
+      chart: prometheus-operator-crds
+      reconcileStrategy: ChartVersion
+      sourceRef:
+        kind: HelmRepository
+        name: prometheus-community
+      version: 2.0.0
+  interval: 1m0s
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
   name: kube-prometheus-stack
   namespace: monitoring
 spec:
@@ -13,6 +29,8 @@ spec:
         kind: HelmRepository
         name: prometheus-community
       version: 45.9.0
+  dependsOn:
+    - name: prometheus-operator-crds
   values:
     global:
       rbac:
