remove prometheus-operator-crds since already included in kube-prometheus-stack

--- a/apps/cluster-0/cloudflared/values.yaml
+++ b/apps/cluster-0/cloudflared/values.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: cloudflare
 spec:
   dependsOn:
-    - name: prometheus-operator-crds
+    - name: kube-prometheus-stack
       namespace: monitoring
   values:
     serviceMonitor:
