--- a/apps/base/monitoring/helmrelease.yaml
+++ b/apps/base/monitoring/helmrelease.yaml
@@ -20,4 +20,7 @@ spec:
         pspEnabled: true
         pspAnnotations:
           seccomp.security.alpha.kubernetes.io/allowedProfileNames: '*'
+    prometheus-node-exporter:
+      rbac:
+        pspEnabled: true
   interval: 1m0s
