--- a/apps/cluster-0/monitoring/kustomization.yaml
+++ b/apps/cluster-0/monitoring/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/monitoring
+  - ../../base/monitoring/kube-promnetheus-stack
 patchesStrategicMerge:
   - namespace.yaml
   - values.yaml
