deploy speedtest-exporter to cluster-0

--- a/apps/cluster-0/monitoring/kustomization.yaml
+++ b/apps/cluster-0/monitoring/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - ../../base/monitoring
   - ../../base/monitoring/kube-promnetheus-stack
+  - ../../base/monitoring/speedtest-exporter
 patchesStrategicMerge:
   - namespace.yaml
   - values.yaml
