Fix service monitor labels for speedtest-exporter

--- a/apps/base/monitoring/speedtest-exporter/helmrelease.yaml
+++ b/apps/base/monitoring/speedtest-exporter/helmrelease.yaml
@@ -19,4 +19,6 @@ spec:
   values:
     serviceMonitor:
       enabled: true
+      extraLabels:
+        release: kube-prometheus-stack
   interval: 1m0s
