deploy proxmox-exporter to cluster-0

--- a/apps/cluster-0/monitoring/kustomization.yaml
+++ b/apps/cluster-0/monitoring/kustomization.yaml
@@ -5,6 +5,8 @@ resources:
   - ../../base/monitoring
   - ../../base/monitoring/kube-prometheus-stack
   - ../../base/monitoring/speedtest-exporter
+  - ../../base/monitoring/proxmox-exporter
 patchesStrategicMerge:
   - namespace.yaml
   - values.yaml
+  - proxmox-exporter.yaml
