rename kube-prometheus-stack cluster-0 patch filename

--- a/apps/cluster-0/monitoring/kustomization.yaml
+++ b/apps/cluster-0/monitoring/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   - ../../base/monitoring/proxmox-exporter
 patchesStrategicMerge:
   - namespace.yaml
-  - values.yaml
+  - kube-prometheus-stack.yaml
   - proxmox-exporter.yaml
