--- a/apps/cluster-0/monitoring/kube-prometheus-stack.yaml
+++ b/apps/cluster-0/monitoring/kube-prometheus-stack.yaml
@@ -7,12 +7,32 @@ spec:
   values:
     grafana:
       annotations:
-        operator.1password.io/item-path: "vaults/Kubernetes/items/grafana-admin-user"
-        operator.1password.io/item-name: "grafana-admin-user"
+        operator.1password.io/item-path: "vaults/Kubernetes/items/grafana-secrets"
+        operator.1password.io/item-name: "grafana-secrets"
       admin:
-        existingSecret: "grafana-admin-user"
+        existingSecret: "grafana-secrets"
         userKey: username
         passwordKey: password
+      env:
+        GF_DATABASE_TYPE: postgres
+        GF_DATABASE_SSL_MODE: disable
+      envValueFrom:
+        GF_DATABASE_USER:
+          secretKeyRef:
+            name: grafana-secrets
+            key: dbUser
+        GF_DATABASE_PASSWORD:
+          secretKeyRef:
+            name: grafana-secrets
+            key: dbPassword
+        GF_DATABASE_HOST:
+          secretKeyRef:
+            name: grafana-secrets
+            key: dbHost
+        GF_DATABASE_NAME:
+          secretKeyRef:
+            name: grafana-secrets
+            key: dbName
     prometheus:
       prometheusSpec:
         additionalScrapeConfigs:
