--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,20 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "github>damoun/renovate-config"
-  ]
+  ],
+  "flux": {
+    "fileMatch": [
+      ".+\\.ya?ml$"
+    ]
+  },
+  "helm-values": {
+    "fileMatch": [
+      ".+\\.ya?ml$",
+    ]
+  },
+  "kubernetes": {
+    "fileMatch": [
+      ".+\\.ya?ml$"
+    ]
+  }
 }
