--- a/apps/cluster-0/monitoring/kustomization.yaml
+++ b/apps/cluster-0/monitoring/kustomization.yaml
@@ -6,7 +6,9 @@ resources:
   - ../../base/monitoring/kube-prometheus-stack
   - ../../base/monitoring/speedtest-exporter
   - ../../base/monitoring/proxmox-exporter
+  - ../../base/monitoring/prometheus-blackbox-exporter
 patchesStrategicMerge:
   - namespace.yaml
   - kube-prometheus-stack.yaml
   - proxmox-exporter.yaml
+  - prometheus-blackbox-exporter.yaml
