fix service monitor for blackbox-exporter

--- a/apps/cluster-0/monitoring/prometheus-blackbox-exporter.yaml
+++ b/apps/cluster-0/monitoring/prometheus-blackbox-exporter.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: monitoring
 spec:
   values:
+    serviceMonitor:
       targets:
         - name: grafana
           url: "http://grafana.damoun.cloud"
