fix renovate config

--- a/apps/base/develop/renovate/helmrelease.yaml
+++ b/apps/base/develop/renovate/helmrelease.yaml
@@ -16,6 +16,8 @@ spec:
   values:
     cronjob:
        schedule: "@hourly"
+    renovate:
+      config: '{}'
     dind:
       enabled: true
     redis:
