--- a/apps/cluster-0/develop/renovate.yaml
+++ b/apps/cluster-0/develop/renovate.yaml
@@ -11,7 +11,7 @@ spec:
         operator.1password.io/item-name: "renovate-secrets"
     env:
       - name: RENOVATE_AUTODISCOVER
-        value: true
+        value: "true"
       - name: LOG_LEVEL
         value: debug
     envFrom:
