--- a/apps/cluster-0/develop/renovate.yaml
+++ b/apps/cluster-0/develop/renovate.yaml
@@ -14,6 +14,5 @@ spec:
         value: "true"
       - name: LOG_LEVEL
         value: debug
-    envFrom:
-      - secretRef:
-          name: renovate-secrets
+    renovate:
+      secretName: renovate-secrets
