--- a/apps/cluster-0/develop/kustomization.yaml
+++ b/apps/cluster-0/develop/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base/develop
+  - secrets.yaml
   - ../../base/develop/renovate
 patchesStrategicMerge:
   - namespace.yaml
