--- a/apps/cluster-0/develop/secrets.yaml
+++ b/apps/cluster-0/develop/secrets.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
@@ -5,3 +6,11 @@ metadata:
   namespace: develop
 spec:
   itemPath: "vaults/Kubernetes/items/renovate-secrets"
+---
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: github-actions-runner
+  namespace: develop
+spec:
+  itemPath: "vaults/Kubernetes/items/github-actions-runner"
