fix secret name & key for actions-runner-controller

--- a/apps/cluster-0/develop/actions-runner-controller.yaml
+++ b/apps/cluster-0/develop/actions-runner-controller.yaml
@@ -10,5 +10,5 @@ spec:
       - name: GITHUB_TOKEN
         valueFrom:
           secretKeyRef:
-            key: github-actions-runner
-            name: token
+            name: github-actions-runner
+            key: token
