--- a/apps/cluster-0/cloudflared/values.yaml
+++ b/apps/cluster-0/cloudflared/values.yaml
@@ -8,6 +8,7 @@ spec:
     - name: kube-prometheus-stack
       namespace: monitoring
   values:
+    replicaCount: 3
     serviceMonitor:
       enabled: true
     secret:
