--- a/apps/cluster-0/develop/kustomization.yaml
+++ b/apps/cluster-0/develop/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - secrets.yaml
   - ../../base/develop/renovate
   - ../../base/develop/actions-runner-controller
+  - actions-runners.yaml
 patchesStrategicMerge:
   - namespace.yaml
   - renovate.yaml
