--- a/apps/cluster-0/develop/actions-runners.yaml
+++ b/apps/cluster-0/develop/actions-runners.yaml
@@ -3,6 +3,7 @@ apiVersion: actions.summerwind.dev/v1alpha1
 kind: RunnerDeployment
 metadata:
   name: tf-nas
+  namespace: develop
 spec:
   replicas: 1
   template:
