deploy github actions-runner for tf-talos on cluster-0

--- a/apps/cluster-0/develop/actions-runners.yaml
+++ b/apps/cluster-0/develop/actions-runners.yaml
@@ -10,3 +10,15 @@ spec:
     spec:
       repository: damoun/tf-nas
       labels: ["home"]
+---
+apiVersion: actions.summerwind.dev/v1alpha1
+kind: RunnerDeployment
+metadata:
+  name: actions-runner-tf-talos
+  namespace: develop
+spec:
+  replicas: 1
+  template:
+    spec:
+      repository: damoun/tf-talos
+      labels: ["home"]
