--- a/apps/base/rook-ceph/helmrelease.yaml
+++ b/apps/base/rook-ceph/helmrelease.yaml
@@ -14,3 +14,21 @@ spec:
         name: rook
       version: v1.11.4
   interval: 1m0s
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: rook-ceph-cluster
+  namespace: rook-ceph
+spec:
+  chart:
+    spec:
+      chart: rook-ceph-cluster
+      reconcileStrategy: ChartVersion
+      sourceRef:
+        kind: HelmRepository
+        name: rook
+      version: 1.11.4
+  values:
+    operatorNamespace: rook-ceph
+  interval: 1m0s
