add prometheus operator crds helm release to not break deployment when kube-prometheus-stack has an issue

--- a/apps/base/monitoring/prometheus-blackbox-exporter/helmrelease.yaml
+++ b/apps/base/monitoring/prometheus-blackbox-exporter/helmrelease.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: monitoring
 spec:
   dependsOn:
-    - name: kube-prometheus-stack
+    - name: prometheus-operator-crds
       namespace: monitoring
   chart:
     spec:
