--- a/apps/base/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/apps/base/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -2,6 +2,22 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
+  name: prometheus-operator-crds
+  namespace: monitoring
+spec:
+  chart:
+    spec:
+      chart: prometheus-operator-crds
+      reconcileStrategy: ChartVersion
+      sourceRef:
+        kind: HelmRepository
+        name: prometheus-community
+      version: 3.0.0
+  interval: 1m0s
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
   name: kube-prometheus-stack
   namespace: monitoring
 spec:
@@ -13,8 +29,4 @@ spec:
         kind: HelmRepository
         name: prometheus-community
       version: 45.21.0
-  values:
-    global:
-      rbac:
-        createAggregateClusterRoles: true
   interval: 1m0s
