fix temp CRDs depencencies

--- a/apps/cluster-1/develop/kustomization.yaml
+++ b/apps/cluster-1/develop/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - secrets.yaml
   - ../../base/develop/renovate
   - ../../base/develop/actions-runner-controller
-  - actions-runners.yaml
+#  - actions-runners.yaml
 patchesStrategicMerge:
   - namespace.yaml
   - renovate.yaml
