add dependencency on 1password/connect for actions-runner-controller

--- a/apps/cluster-1/develop/actions-runner-controller.yaml
+++ b/apps/cluster-1/develop/actions-runner-controller.yaml
@@ -5,6 +5,9 @@ metadata:
   name: actions-runner-controller
   namespace: develop
 spec:
+  dependsOn:
+    - name: connect
+      namespace: 1password
   values:
     env:
       - name: GITHUB_TOKEN
