enable prometheus metrics on actions-runner-controller

--- a/apps/cluster-1/develop/actions-runner-controller.yaml
+++ b/apps/cluster-1/develop/actions-runner-controller.yaml
@@ -8,7 +8,17 @@ spec:
   dependsOn:
     - name: connect
       namespace: 1password
+    - name: prometheus-operator-crds
+      namespace: monitoring
   values:
+    metrics:
+      serviceMonitor: true
+      serviceMonitorLabels:
+        release: kube-prometheus-stack
+    actionsMetrics:
+      serviceMonitor: true
+      serviceMonitorLabels:
+        release: kube-prometheus-stack
     env:
       - name: GITHUB_TOKEN
         valueFrom:
