--- a/crds/base/1password-connect.yaml
+++ b/crds/base/1password-connect.yaml
@@ -1,5 +1,7 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+metadata:
+  name: 1password-connect-crds
 resources:
   - https://raw.githubusercontent.com/1Password/connect-helm-charts/connect-1.10.0/charts/connect/crds/onepassworditem-crd.yaml
