--- a/clusters/cluster-1/crds.yaml
+++ b/clusters/cluster-1/crds.yaml
@@ -5,6 +5,8 @@ metadata:
   name: crds
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: ns
   interval: 1h
   retryInterval: 1m
   timeout: 5m
