--- a/crds/base/prometheus-operator.yaml
+++ b/crds/base/prometheus-operator.yaml
@@ -3,6 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: prometheus-operator-crds
+  namespace: monitoring
 spec:
   chart:
     spec:
