add shared namespace

--- a/ns/cluster-1/kustomization.yaml
+++ b/ns/cluster-1/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ../base/develop.yaml
   - ../base/monitoring.yaml
   - ../base/rook-ceph.yaml
+  - ../base/shared.yaml
 patchesStrategicMerge:
   - rook-ceph.yaml
   - develop.yaml
