--- a/repo/base/1password.yaml
+++ b/repo/base/1password.yaml
@@ -2,8 +2,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: damoun
-  namespace: cloudflare
+  name: 1password
+  namespace: 1password
 spec:
   interval: 1m0s
-  url: https://charts.damoun.dev
+  url: https://1password.github.io/connect-helm-charts/
