--- a/apps/base/monitoring/proxmox-exporter/helmrelease.yaml
+++ b/apps/base/monitoring/proxmox-exporter/helmrelease.yaml
@@ -15,6 +15,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: damoun
+        namespace: shared
       version: 1.3.6
   values:
     serviceMonitor:
