--- a/apps/base/monitoring/speedtest-exporter/helmrelease.yaml
+++ b/apps/base/monitoring/speedtest-exporter/helmrelease.yaml
@@ -15,6 +15,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: damoun
+        namespace: shared
       version: 1.0.5
   values:
     serviceMonitor:
