--- a/clusters/cluster-1/repo.yaml
+++ b/clusters/cluster-1/repo.yaml
@@ -2,23 +2,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: apps
+  name: repo
   namespace: flux-system
 spec:
   dependsOn:
     - name: ns
-    - name: repo
-    - name: crds
   interval: 1h
   retryInterval: 1m
   timeout: 5m
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./apps/cluster-1
+  path: ./repo/cluster-1
   prune: true
   wait: true
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-gpg
