--- a/repo/base/damoun.yaml
+++ b/repo/base/damoun.yaml
@@ -3,7 +3,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: damoun
-  namespace: monitoring
+  namespace: shared
 spec:
   interval: 1m0s
   url: https://charts.damoun.dev
