--- a/crds/cluster-1/kustomization.yaml
+++ b/crds/cluster-1/kustomization.yaml
@@ -2,6 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../base/1password-connect.yaml
+  - ../base/1password-connect
   - ../base/prometheus-operator.yaml
-  - ../base/actions-runner-controller.yaml
+  - ../base/actions-runner-controller
