disable resources allocation for rook-ceph-cluster

--- a/apps/cluster-1/rook-ceph/rook-ceph-cluster.yaml
+++ b/apps/cluster-1/rook-ceph/rook-ceph-cluster.yaml
@@ -5,4 +5,13 @@ metadata:
   namespace: rook-ceph
 spec:
   values:
-    toolbox.resources: {}
+    cephClusterSpec:
+      resources:
+        mgr:
+        mon:
+        osd:
+        prepareosd:
+        mgr-sidecar:
+        crashcollector:
+        logcollector:
+        cleanup:
