disable resources allocation for rook-ceph-cluster filesystem & objectstore

--- a/apps/cluster-1/rook-ceph/rook-ceph-cluster.yaml
+++ b/apps/cluster-1/rook-ceph/rook-ceph-cluster.yaml
@@ -15,3 +15,14 @@ spec:
         crashcollector:
         logcollector:
         cleanup:
+    cephFileSystems:
+      - name: ceph-filesystem
+        spec:
+          metadataServer:
+            resources:
+    cephObjectStores:
+      - name: ceph-objectstore
+        spec:
+          gateway:
+            resources:
+    
