fix resources allocation for rook-ceph-cluster

--- a/apps/cluster-1/rook-ceph/rook-ceph-cluster.yaml
+++ b/apps/cluster-1/rook-ceph/rook-ceph-cluster.yaml
@@ -8,21 +8,58 @@ spec:
     cephClusterSpec:
       resources:
         mgr:
+          limits:
+            cpu: "0"
+            memory: "0"
+          requests:
+            cpu: "0"
+            memory: "0"
         mon:
+          limits:
+            cpu: "0"
+            memory: "0"
+          requests:
+            cpu: "0"
+            memory: "0"
         osd:
+          limits:
+            cpu: "0"
+            memory: "0"
+          requests:
+            cpu: "0"
+            memory: "0"
         prepareosd:
+          limits:
+            cpu: "0"
+            memory: "0"
+          requests:
+            cpu: "0"
+            memory: "0"
         mgr-sidecar:
+          limits:
+            cpu: "0"
+            memory: "0"
+          requests:
+            cpu: "0"
+            memory: "0"
         crashcollector:
+          limits:
+            cpu: "0"
+            memory: "0"
+          requests:
+            cpu: "0"
+            memory: "0"
         logcollector:
+          limits:
+            cpu: "0"
+            memory: "0"
+          requests:
+            cpu: "0"
+            memory: "0"
         cleanup:
-    cephFileSystems:
-      - name: ceph-filesystem
-        spec:
-          metadataServer:
-            resources:
-    cephObjectStores:
-      - name: ceph-objectstore
-        spec:
-          gateway:
-            resources:
-    
+          limits:
+            cpu: "0"
+            memory: "0"
+          requests:
+            cpu: "0"
+            memory: "0"
