--- a/apps/cluster-1/kustomization.yaml
+++ b/apps/cluster-1/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./kube-system/
-  - ./rook-ceph/
+#  - ./rook-ceph/
   - ./cert-manager/
   - ./1password-connect/
   - ./cloudflared/
