deploy zalando postgres-operator

--- a/crds/cluster-1/kustomization.yaml
+++ b/crds/cluster-1/kustomization.yaml
@@ -5,3 +5,4 @@ resources:
   - ../base/1password-connect
   - ../base/prometheus-operator.yaml
   - ../base/actions-runner-controller
+  - ../base/postgres-operator
