--- a/apps/cluster-1/monitoring/kustomization.yaml
+++ b/apps/cluster-1/monitoring/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ../../base/monitoring/speedtest-exporter
   - ../../base/monitoring/proxmox-exporter
   - ../../base/monitoring/prometheus-blackbox-exporter
+  - ./postgres.yaml
 patchesStrategicMerge:
   - kube-prometheus-stack.yaml
   - proxmox-exporter.yaml
