--- a/apps/cluster-1/rook-ceph/rook-ceph-cluster.yaml
+++ b/apps/cluster-1/rook-ceph/rook-ceph-cluster.yaml
@@ -7,6 +7,13 @@ spec:
   values:
     cephClusterSpec:
       resources:
+        mds:
+          limits:
+            cpu: "0"
+            memory: "0"
+          requests:
+            cpu: "0"
+            memory: "0"
         mgr:
           limits:
             cpu: "0"
