disable grafana until I deploy working postgresql

--- a/apps/cluster-1/monitoring/kube-prometheus-stack.yaml
+++ b/apps/cluster-1/monitoring/kube-prometheus-stack.yaml
@@ -8,6 +8,7 @@ spec:
     defaultRules:
       create: false
     grafana:
+      enabled: false
       defaultDashboardsEnabled: false
       annotations:
         operator.1password.io/item-path: "vaults/Kubernetes/items/grafana-secrets"
