deploy openebs-jiva to cluster-1

--- a/ns/cluster-1/kustomization.yaml
+++ b/ns/cluster-1/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ../base/develop.yaml
   - ../base/monitoring.yaml
   - ../base/shared.yaml
+  - ../base/openebs-jiva.yaml
 patchesStrategicMerge:
   - develop.yaml
   - monitoring.yaml
