--- a/repo/cluster-1/kustomization.yaml
+++ b/repo/cluster-1/kustomization.yaml
@@ -9,3 +9,4 @@ resources:
   - ../base/prometheus-community.yaml
   - ../base/renovate.yaml
   - ../base/zalando-postgres-operator.yaml
+  - ../base/openebs-jiva.yaml
