--- a/crds/cluster-1/kustomization.yaml
+++ b/crds/cluster-1/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
   - ../base/prometheus-operator.yaml
   - ../base/actions-runner-controller
   - ../base/postgres-operator
+  - ../base/openebs-jiva/
