deploy postgresql with openebs-jiva storageclass

--- a/apps/cluster-1/monitoring/postgresql.yaml
+++ b/apps/cluster-1/monitoring/postgresql.yaml
@@ -7,7 +7,7 @@ spec:
   teamId: "grafana"
   volume:
     size: 18Gi
-    storageClass: ceph-block
+    storageClass: openebs-jiva-csi-default
   numberOfInstances: 2
   users:
     grafana:
