--- a/apps/cluster-1/monitoring/kube-prometheus-stack.yaml
+++ b/apps/cluster-1/monitoring/kube-prometheus-stack.yaml
@@ -8,7 +8,6 @@ spec:
     defaultRules:
       create: false
     grafana:
-      enabled: false
       defaultDashboardsEnabled: false
       annotations:
         operator.1password.io/item-path: "vaults/Kubernetes/items/grafana-secrets"
@@ -19,24 +18,17 @@ spec:
         passwordKey: password
       env:
         GF_DATABASE_TYPE: postgres
-        GF_DATABASE_SSL_MODE: disable
+        GF_DATABASE_HOST: "grafana-postgresql.monitoring.svc.cluster.local:5432"
+        GF_DATABASE_NAME: grafana
       envValueFrom:
         GF_DATABASE_USER:
           secretKeyRef:
-            name: grafana-secrets
-            key: dbUser
+            name: grafana.grafana-postgresql.credentials.postgresql.acid.zalan.do
+            key: username
         GF_DATABASE_PASSWORD:
           secretKeyRef:
-            name: grafana-secrets
-            key: dbPassword
-        GF_DATABASE_HOST:
-          secretKeyRef:
-            name: grafana-secrets
-            key: dbHost
-        GF_DATABASE_NAME:
-          secretKeyRef:
-            name: grafana-secrets
-            key: dbName
+            name: grafana.grafana-postgresql.credentials.postgresql.acid.zalan.do
+            key: password
     prometheus:
       prometheusSpec:
         additionalScrapeConfigs:
