--- a/apps/cluster-1/database/kustomization.yaml
+++ b/apps/cluster-1/database/kustomization.yaml
@@ -1,5 +1,6 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  - ../../base/database
+bases:
+  - ../../base/database/postgres-operator
+  - ../../base/database/mongo-operator
