--- a/crds/cluster-1/kustomization.yaml
+++ b/crds/cluster-1/kustomization.yaml
@@ -1,9 +1,11 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
+bases:
   - ../base/1password-connect
-  - ../base/prometheus-operator.yaml
   - ../base/actions-runner-controller
   - ../base/postgres-operator
   - ../base/openebs-jiva/
+resources:
+  - ../base/prometheus-operator.yaml
+  - ../base/mongo-operator.yaml
