--- a/repo/cluster-1/kustomization.yaml
+++ b/repo/cluster-1/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
   - ../base/renovate.yaml
   - ../base/zalando-postgres-operator.yaml
   - ../base/openebs-jiva.yaml
+  - ../base/mongodb.yaml
