use github instead of docker hub for renovate image

--- a/apps/base/develop/renovate/helmrelease.yaml
+++ b/apps/base/develop/renovate/helmrelease.yaml
@@ -20,4 +20,6 @@ spec:
       config: '{}'
     dind:
       enabled: true
+    image:
+      repository: "ghcr.io/renovatebot/renovate"
   interval: 1m0s
