deploy actions-runners for github on cluster-1

--- a/apps/cluster-1/develop/kustomization.yaml
+++ b/apps/cluster-1/develop/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - secrets.yaml
   - ../../base/develop/renovate
   - ../../base/develop/actions-runner-controller
-#  - actions-runners.yaml
+  - actions-runners.yaml
 patchesStrategicMerge:
   - renovate.yaml
   - actions-runner-controller.yaml
