set mongo-operator to watch for resource in network namespace

--- a/apps/cluster-1/database/kustomization.yaml
+++ b/apps/cluster-1/database/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 bases:
   - ../../base/database/postgres-operator
   - ../../base/database/mongo-operator
+patchesStrategicMerge:
+  - mongo-operator.yaml
