--- a/apps/cluster-1/network/kustomization.yaml
+++ b/apps/cluster-1/network/kustomization.yaml
@@ -1,9 +1,10 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: network
 bases:
   - ../../base/network/omada-controller/
+  - https://github.com/mongodb/mongodb-kubernetes-operator//config/rbac/?ref=v0.7.9&submodules=false
 resources:
   - ./mongo.yaml
   - ./secrets.yaml
-  - mongo-operator-rbac.yaml
