setup connection string secret for mongo omada-controller

--- a/apps/cluster-1/network/mongo.yaml
+++ b/apps/cluster-1/network/mongo.yaml
@@ -49,5 +49,6 @@ spec:
         - name: readWrite
           db: omada
       scramCredentialsSecretName: omada
+      connectionStringSecretName: mongo-omada-connection-string
   additionalMongodConfig:
     storage.wiredTiger.engineConfig.journalCompressor: zlib
