setup init container to chmod data volume of mongo omada-controller

--- a/apps/cluster-1/network/mongo.yaml
+++ b/apps/cluster-1/network/mongo.yaml
@@ -13,6 +13,23 @@ spec:
       modes: ["SCRAM"]
   statefulSet:
     spec:
+      template:
+        spec:
+          initContainers:
+            - command:
+              - chown
+              - -R
+              - "2000"
+              - /data
+              image: busybox
+              volumeMounts:
+                - mountPath: /data
+                  name: data-volume
+              securityContext:
+                runAsNonRoot: false
+                runAsUser: 0
+                runAsGroup: 0
+              name: change-dir-permissions
       volumeClaimTemplates:
         - metadata:
             name: data-volume
