--- a/apps/cluster-1/monitoring/kube-prometheus-stack.yaml
+++ b/apps/cluster-1/monitoring/kube-prometheus-stack.yaml
@@ -21,6 +21,7 @@ spec:
         GF_DATABASE_TYPE: postgres
         GF_DATABASE_HOST: "grafana-postgresql.monitoring.svc.cluster.local:5432"
         GF_DATABASE_NAME: grafana
+        GF_DATABASE_SSL_MODE: required
       envValueFrom:
         GF_DATABASE_USER:
           secretKeyRef:
