fix 1password helm repo been down by using github raw file

--- a/repo/base/1password.yaml
+++ b/repo/base/1password.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: 1password
 spec:
   interval: 1m0s
-  url: https://1password.github.io/connect-helm-charts/
+  url: https://raw.githubusercontent.com/1Password/connect-helm-charts/gh-pages/
