configure nodeport for discovery port of omada controller

--- a/apps/cluster-1/network/omada-controller.yaml
+++ b/apps/cluster-1/network/omada-controller.yaml
@@ -10,8 +10,9 @@ spec:
       secretName: mongo-omada-connection-string
       secretKey: connectionString.standard
     service:
-      ports:
-        https: 8043
+      type: NodePort
+      nodePorts:
+        discovery: 32000
     livenessProbe:
       enabled: false
     readinessProbe:
