use port 29811 for omada-controller discovery port

--- a/apps/cluster-1/network/omada-controller.yaml
+++ b/apps/cluster-1/network/omada-controller.yaml
@@ -11,8 +11,12 @@ spec:
       secretKey: connectionString.standard
     service:
       type: NodePort
+      ports:
+        discovery: 29811
       nodePorts:
         discovery: 32000
+    containerPorts:
+      discovery: 29811
     livenessProbe:
       enabled: false
     readinessProbe:
